--- a/css/styles.css
+++ b/css/styles.css
@@ -297,8 +297,6 @@ img{
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(0%);
     flex-basis: calc((100% - 72px)/4);
-    
-    
 }
 .port-item:hover{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -405,6 +403,52 @@ img{
 .icon-footer-link:focus{
     background-color: #31d0aa;
 }
+.form-footer-text{
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+.form-footer-box{
+    display: flex;
+    gap: 24px;
+}
+
+.mail-footer{
+ width: 264px;
+ height: 50px;;
+ border: 1px solid #ffffff;
+ background-color: transparent;
+ font-size: 12px;
+ line-height: 2;
+ letter-spacing: 0.04em;
+ padding-left: 16px;
+ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+ border-radius: 4px;
+ color: #ffffff;
+}
+.footer-btn{
+     min-width: 165px;
+     height:40px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-family: "Roboto",sans-serif;
+     font-size: 16px;
+     font-weight: 500;
+     line-height: 1,5;
+     letter-spacing: 0,04em;
+     color: #ffffff;
+     cursor:pointer;
+     background-color: #4D5AE5;
+     border-radius: 4px;
+
+}
+.footer-btn-svg{
+    margin-left: 16px;
+}
 /*icon*/
 .icon-social{
     display: flex;
@@ -439,222 +483,160 @@ img{
 .social-svg{
     fill:#f4f4fd;
 }
-/* Backdrop stil */
-/*Form*/
-.modal-backdrop{
+/* Form*/
+.modal-window{
     position: fixed;
-    z-index: 2;
     top: 0;
-    left: 0;
+    left:0;
     width: 100%;
     height: 100%;
-    min-height: 584px;
-    background: #2E2F4266;
-    opacity: 1;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1)
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4,0,0.2,1),visibilty 250ms cubic-bezier(0.4,0,0.2,1);
 }
 .modal-container{
     position: absolute;
-    background-color: #FCFCFC;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50½,-50½);
     width: 408px;
     min-height: 584px;
-    top:50%;
-    left: 50%;
-    margin: 0 auto;
+    background: #fcfcfc;
     border-radius: 4px;
-    padding: 72px 24px 24px 24px;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    transform: translate(-50%, -50%);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px
 
 }
-.modal-header-content{
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #2E2F42;
-    margin-bottom: 16px;
-
-}
-.popup-header-box{
-    margin: 0 auto;
-}
-
-.modal-content-btn{
+.modal-btn{   /* kapatma tuşu*/
     position: absolute;
     top: 24px;
     right: 24px;
-    display: flex;
-    height: 24px;
     width: 24px;
-    background-color: #E7E9FC;
-    color: black;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    height: 24px;
     border-radius: 50%;
+    display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
     cursor: pointer;
-    transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.modal-content-btn:hover{
+.modal-btn:hover,
+.modal-btn:focus{
     background-color: #404bbf;
     border: none;
 }
-.modal-content-btn:focus{
-    background-color: #404bbf;
-    border: none;
-}
-.modal-content-svg{
+.modal-btn-svg{
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-content-btn:hover .modal-content-svg{
+.modal-btn-svg:hover,
+.modal-btn-svg:focus{
     fill: #ffffff;
 }
-
-.modal-content-btn:focus .modal-content-svg{
-    fill: #ffffff;
-}
-.modal-header-content{
-    font-size:16px;
+.modal-text{
     font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.02em;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0,02em;
+    text-align: center;
     color: #2e2f42;
+    margin-bottom: 16px;
 }
-.modal-backdrop-content{
-    display: flex;
-    flex-direction: column;
-    gap: 8px ;
+.modal-list{
+    margin-bottom: 8px;
 }
-.form-label{
-    font-size:12px;
+.modal-name{
+    font-size: 12px;
     line-height: 1.17;
-    letter-spacing: 0.04em;
-    color:#8e8f99;
+    letter-spacing: 0,04em;
+    color: #8E8F99;
     display: block;
     margin-bottom: 4px;
 }
-.form-box-content{
+.name-div{
     position: relative;
+   
 }
-.form-check{
-    margin-bottom: 24px;
+.name-input{ /*Kutucuk ölçülerini belirler */
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-check-label{
-    font-size:12px;
+.name-input:focus,
+.name-svg:focus,
+.textarea-modal:focus{ /*Kutucuğa tıklanıldığında*/
+    border-color: #4D5AE5;
+}
+.name-svg{
+    position: absolute;
+    left:16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4,0,0.2,1);
+}
+.textarea-modal{
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    color: #8e8f99;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4,0,0.2,1);
 }
-.form-check-span{
+.modal-comment-list{
+    margin-bottom: 16px;
+
+}
+.modal-check{
+    margin-bottom: 24px;
+}
+.modal-check-label{
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color:#8E8F99;
+}
+.checkbox-span{
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 2px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: 2px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     fill: transparent;
 }
-input[type="checkbox"]:checked + label .form-check-span {
+input[type="checkbox"]:checked + label .checkbox-span{
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
 }
-
 .check-link{
-    color: #4d5ae5;
+    color: #4D5AE5;
 }
-.form-box{
-    margin-bottom: 8px;
-}
-.form-box-tex{
-    margin-bottom: 16px;
-}
-.checkbox{
-    margin-right: 8px;
-    
-}
-.form-input{
+.submit-btn{
     display: block;
-    width: 100%;
-    height: 40px;
-    border-radius: 4px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    padding: 11px 38px;
-    background-color: transparent;
-    padding-left: 38px;
-    outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-.form-input:focus{
-    border-color: #4D5AE5;
-}
-.form-textarea{
-    display: block;
-    width: 100%;
-    height: 120px;
-    font-size:12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    padding: 8px 16px;
-    outline: transparent;
-    resize: none;
-    background-color: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
-}
-.form-textarea:focus{
-    border-color: #4D5AE5;
-}
-.form-box-svg{
-    fill: rgba(46, 47, 66, 1);
-    position: absolute;
-    top: 50%;
-    left: 16px;
-    transform: translateY(-50%);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
-    
-}
-.form-input:focus ~ .form-box-svg {
-    fill: #4D5AE5;
-}
-.popup-blue-btn{
-    font-family: "Roboto", sans-serif;
+    min-width:169px;
+    height: 56px;
+    font-family: "Roboto",sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: #ffffff;
-    cursor: pointer;
-    background-color: #4D5AE5;
+    color: #4D5AE5;
     border: none;
-    display: block;
-    min-width: 169px;
-    height: 56px;
-    border-radius: 4px;
-    padding: 16px 32px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    margin:0 auto
 }
-.form-btn{
-    display: block;
-    text-align: center;
-    margin-top: 24px 0;
-
-}
-/*popup*/
