--- a/css/styles.css
+++ b/css/styles.css
@@ -438,12 +438,13 @@ img{
      font-family: "Roboto",sans-serif;
      font-size: 16px;
      font-weight: 500;
-     line-height: 1,5;
-     letter-spacing: 0,04em;
+     line-height: 1.5;
+     letter-spacing: 0.04em;
      color: #ffffff;
      cursor:pointer;
      background-color: #4D5AE5;
      border-radius: 4px;
+     border: none;
 
 }
 .footer-btn-svg{
@@ -491,7 +492,7 @@ img{
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
-    transition: opacity 250ms cubic-bezier(0.4,0,0.2,1),visibilty 250ms cubic-bezier(0.4,0,0.2,1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-container{
     position: absolute;
@@ -540,7 +541,7 @@ img{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0,02em;
+    letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
     margin-bottom: 16px;
@@ -551,7 +552,7 @@ img{
 .modal-name{
     font-size: 12px;
     line-height: 1.17;
-    letter-spacing: 0,04em;
+    letter-spacing: 0.04em;
     color: #8E8F99;
     display: block;
     margin-bottom: 4px;
@@ -570,7 +571,6 @@ img{
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .name-input:focus,
-.name-svg:focus,
 .textarea-modal:focus{ /*Kutucuğa tıklanıldığında*/
     border-color: #4D5AE5;
 }
@@ -580,6 +580,9 @@ img{
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4,0,0.2,1);
+}
+.name-svg:focus{
+    fill: #4D5AE5;
 }
 .textarea-modal{
     width: 100%;
@@ -591,6 +594,8 @@ img{
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
     resize: none;
     transition: border-color 250ms cubic-bezier(0.4,0,0.2,1);
 }
@@ -635,7 +640,13 @@ input[type="checkbox"]:checked + label .checkbox-span{
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: #4D5AE5;
+    color: #ffffff;
+    background-color: #4D5AE5;
+    cursor: pointer;
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mail-footer{
+    height: 40px;
+    width: 264px;
 }
