--- a/css/styles.css
+++ b/css/styles.css
@@ -476,10 +476,10 @@ img{
     
 }
 .icon-social-link:hover{
-    background-color: #404bbf
+    background-color: #404bbf;
 }
 .icon-social-link:focus{
-    background-color: #404bbf
+    background-color: #404bbf;
 }
 .social-svg{
     fill:#f4f4fd;
@@ -505,8 +505,7 @@ img{
     border-radius: 4px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px
-
+    padding: 72px 24px 24px 24px;
 }
 .modal-btn{   /* kapatma tuşu*/
     position: absolute;
