--- a/css/styles.css
+++ b/css/styles.css
@@ -276,14 +276,15 @@ img{
     padding: 120px 0;
     
 }
+.sec-port > .container{
+    margin-bottom: 8px;
+}
 .port-list{
     display: flex;
     flex-wrap:wrap;
     gap: 24px;
     row-gap:48px;
     list-style: none;
-    
-    
 }
 .port-bar{
     padding: 32px 16px;
@@ -296,7 +297,7 @@ img{
     background-color: #ffffff; 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(0%);
-    flex-basis: calc((100% - 72px)/4);
+    flex-basis: calc((100% - 72px) / 4);
 }
 .port-item:hover{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -324,6 +325,16 @@ img{
 }
 .port-item:hover .img-task{
     transform: translateY(0);
+}
+.port-title{
+    font-weight: 500;
+    line-height: 1.2;
+    color: #2e2f42;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+}
+.port-text{
+    letter-spacing: 0.02em;
 }
 /*Footer bölümü*/
 .page-footer {
@@ -569,8 +580,11 @@ img{
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.name-input:focus,
-.textarea-modal:focus{ /*Kutucuğa tıklanıldığında*/
+.name-input:focus{ 
+    border-color: #4D5AE5;
+}
+/*Kutucuğa tıklanıldığında*/
+.textarea-modal:focus{
     border-color: #4D5AE5;
 }
 .name-svg{
@@ -581,6 +595,16 @@ img{
     transition: fill 250ms cubic-bezier(0.4,0,0.2,1);
 }
 .name-svg:focus{
+    fill: #4D5AE5;
+}
+.phone-svg{
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.phone-svg:focus{
     fill: #4D5AE5;
 }
 .textarea-modal{
