--- a/css/styles.css
+++ b/css/styles.css
@@ -582,6 +582,7 @@ img{
 }
 .name-input:focus{ 
     border-color: #4D5AE5;
+    fill: #4D5AE5;
 }
 /*Kutucuğa tıklanıldığında*/
 .textarea-modal:focus{
