--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,8 @@ img{
     gap: 24px;
     row-gap:48px;
     list-style: none;
+    margin-left: -50px;
+    
 }
 .port-bar{
     padding: 32px 16px;
@@ -298,6 +300,7 @@ img{
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(0%);
     flex-basis: calc((100% - 72px) / 4);
+    
 }
 .port-item:hover{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -381,6 +384,7 @@ img{
     display: flex;
     gap: 16px;
     list-style: none;
+    margin-left: -50px;
     margin-right: 50px;
 }
 .icon-footer-title{
@@ -471,7 +475,7 @@ img{
     gap:24px;
     margin-top: 8px;
     list-style: none;
-    
+    margin-left: -30px;
 }
 .icon-social svg{
     width: 16px;
